test/fails/bad_tags/add2.lgl
tag a is vec2;

a->a x = [[1., 2.], [1., 2.]];
a->vec2 y = [[1., 2.], [1., 2.]];

a->a bad = x + y; // Can't downcast for addition